# minecraft2

./: .clang-format  .clangd  .gitignore  README.md  meson.build  things.md
shaders/: cube.frag  meson.build  textured_cube.frag  textured_cube.vert  triangle.frag  triangle.vert
src/: app.cpp  app.hpp  blocks.hpp  buffer.hpp  camera.cpp  camera.hpp  descriptors.hpp  device.cpp  device.hpp  engine.cpp  engine.hpp  image.hpp  input.cpp  input.hpp  interfaces.hpp  irange.hpp  log.hpp  logging.hpp  main.cpp  other.hpp  pipeline.cpp  pipeline.hpp  player.hpp  queues.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  uniforms.cpp  uniforms.hpp  utility.hpp  utils.hpp  vertex.cpp  vertex.hpp  viewport.hpp  window.cpp  window.hpp  world.cpp  (+1 more)
src/gfx/: buffer.cpp  buffer.hpp  commands.cpp  commands.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  fence.hpp  framedata.cpp  framedata.hpp  image.cpp  image.hpp  pipeline.cpp  pipeline.hpp  queues.cpp  queues.hpp  renderer.cpp  renderer.hpp  semaphore.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp  sync.cpp  sync.hpp  uniforms.cpp  uniforms.hpp  vertex.cpp  vertex.hpp  viewport.hpp
src/utils/: enums.hpp  getter.hpp  log.hpp  vulkan.hpp
subprojects/: stb.wrap
